Commented and def rouge_noir

--- a/Projection_stereographique_Rares.ipynb
+++ b/Projection_stereographique_Rares.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "32d1c073-e310-4994-a20f-08bc23c1b5e0",
    "metadata": {
     "tags": []
@@ -19,20 +19,35 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "def to_plane(x_n, y_n, z_n):\n",
+    "# Cartesien <-> Spherique\n",
+    "def cartesian_to_spherical(x, y, z):\n",
+    "    r = np.sqrt(x**2 + y**2 + z**2)\n",
+    "    theta = np.arctan2(z, np.sqrt(x**2 + y**2))\n",
+    "    phi = np.arctan2(y,x)\n",
+    "    return r, theta, phi\n",
+    "\n",
+    "def spherical_to_cartesian(r, theta, phi):\n",
+    "    x = r*np.sin(theta)*np.cos(phi)\n",
+    "    y = r*np.sin(theta)*np.sin(phi)\n",
+    "    z = r*cos(theta)\n",
+    "    return x, y, z\n",
+    "\n",
+    "# Projection stereographique\n",
+    "def sphere_to_plane(x_n, y_n, z_n):\n",
     "    x = 2*x_n/(1 + z_n)\n",
     "    y = 2*y_n/(1 + z_n)\n",
-    "    return (x, y)\n",
+    "    return x, y\n",
     "\n",
-    "def to_sphere(x, y):\n",
+    "def plane_to_sphere(x, y):\n",
     "    x_n = 4*x/(4 + x**2 + y**2)\n",
     "    y_n = 4*y/(4 + x**2 + y**2)\n",
     "    z_n = (4 - x**2 - y**2)/(4 + x**2 + y**2)\n",
-    "    return (x_n, y_n, z_n)\n",
+    "    return x_n, y_n, z_n\n",
     "\n",
+    "# Angle <-> Longueur\n",
     "def f_to_length(angle_degrees):\n",
     "    angle_radians = np.radians((180-angle_degrees)/2)\n",
-    "    (x, y) = to_plane(np.cos(angle_radians), 0, np.sin(angle_radians))\n",
+    "    x, y = sphere_to_plane(np.cos(angle_radians), 0, np.sin(angle_radians))\n",
     "    return 2*x\n",
     "\n",
     "def length_to_f(length):\n",
@@ -41,43 +56,110 @@
     "    alpha_degrees = np.degrees(alpha_radians)\n",
     "    return 180 - 2*alpha_degrees\n",
     "\n",
+    "# Screen size\n",
     "def screen_size(resX, resY, length):\n",
     "    ratio = resX/resY\n",
     "    width = length/ratio\n",
-    "    return (length, width)\n",
+    "    return length, width\n",
     "\n",
-    "def plane_to_screen(resX, resY, x, y):\n",
+    "# Screen <-> Planne\n",
+    "def plane_to_screen(resX, resY, x, y, f):\n",
+    "    L = f_to_length(f)\n",
     "    X = (2*x/L)*resX + resX/2\n",
     "    Y = (2*y/L)*resX + resY/2\n",
-    "    return (X, Y)\n",
+    "    return X, Y\n",
     "\n",
-    "def screen_to_plane(resX, resY, X, Y):\n",
-    "    x = (X - resX/2)*L/(2*resX)\n",
+    "def screen_to_plane(resX, resY, X, Y, f):\n",
+    "    L = f_to_length(f)\n",
+    "    x = (X - resX/2)*L /(2*resX)\n",
     "    y = (Y - resY/2)*L/(2*resX)\n",
-    "    return (x, y)\n",
+    "    return x, y\n",
     "\n",
+    "# Rotations\n",
+    "def R3(psi):\n",
+    "    return np.array([[np.cos(psi),   np.sin(psi),  0],\n",
+    "                     [-np.sin(psi),  np.cos(psi),  0],\n",
+    "                     [0,             0,            1]])\n",
+    "\n",
+    "def R2(theta):\n",
+    "    return np.array([[1,             0,                0],\n",
+    "                     [0,  np.cos(theta),  -np.sin(theta)],\n",
+    "                     [0,  np.sin(theta),   np.cos(theta)]])\n",
+    "\n",
+    "def R1(phi):\n",
+    "    return np.array([[np.cos(phi),   np.sin(phi),  0],\n",
+    "                     [-np.sin(phi),  np.cos(phi),  0],\n",
+    "                     [0,             0,            1]])\n",
+    "\n",
+    "# Sun <-> Camera\n",
+    "def cam_to_sun(x_n, y_n, z_n, psi, theta, phi):\n",
+    "    vect_cam = np.array([x_n, y_n, z_n])\n",
+    "    vect_sun = vect_cam @ R3(psi) @ R2(theta) @ R1(phi)\n",
+    "    return tuple(vect_sun)\n",
+    "\n",
+    "def sun_to_cam(u_n, v_n, w_n, psi, theta, phi):\n",
+    "    vect_sun = np.array([u_n, v_n, w_n])\n",
+    "    vect_cam = vect_sun @ (R3(psi) @ R2(theta) @ R1(phi)).T\n",
+    "    return tuple(vect_cam)\n",
+    "\n",
+    "# Couleur associe a chaque position\n",
     "def angle_to_colour(phi, theta):\n",
     "    phi_tilde = phi // 5\n",
     "    theta_tilde = theta // 5\n",
     "    \n",
     "    if (phi_tilde + theta_tilde) % 2 == 0:\n",
-    "        return (0, 0, 0)\n",
-    "    return (255, 255, 255)\n",
+    "        return 0, 0, 0\n",
+    "    return 255, 255, 255\n",
     "\n",
-    "# PPM header\n",
-    "width = 256\n",
-    "height = 128\n",
-    "maxval = 255\n",
-    "ppm_header = f\"P3\\n{width} {height}\\n{maxval}\\n\"\n",
+    "# Cadrillage test rouge et bleu\n",
+    "def rouge_noir():\n",
+    "    # PPM header\n",
+    "    width = 256\n",
+    "    height = 128\n",
+    "    maxval = 255\n",
+    "    ppm_header = f\"P3\\n{width} {height}\\n{maxval}\\n\"\n",
     "\n",
-    "# PPM image data\n",
-    "image = f\"255 255 255\"\n",
+    "    # PPM image data\n",
+    "    image = f\"\"\n",
+    "    for i in range(height):\n",
+    "        # Replissage d'une ligne\n",
+    "        for j in range(width-1):\n",
+    "            if (j+i)%2:\n",
+    "                image = image + f\"0 0 255 \"\n",
+    "            else:\n",
+    "                image = image + f\"255 0 0 \"\n",
     "\n",
-    "# Save the PPM image as a binary file\n",
-    "with open(\"sphere_celeste.ppm\", \"wb\") as f:\n",
-    "    f.write(bytearray(ppm_header, \"ascii\"))\n",
-    "    f.write(bytearray(image, \"ascii\"))"
+    "        # Passage a la ligne\n",
+    "        if not (j+i)%2:\n",
+    "            image = image + f\"0 0 255\\n\"\n",
+    "        else:\n",
+    "            image = image + f\"255 0 0\\n\"\n",
+    "\n",
+    "    # Save the PPM image as a binary file\n",
+    "    with open(\"rouge_noir.ppm\", \"wb\") as f:\n",
+    "        f.write(bytearray(ppm_header, \"ascii\"))\n",
+    "        f.write(bytearray(image, \"ascii\"))\n",
+    "\n",
+    "def pixel_to_colour(resX, resY, f, X, Y, psi, theta, phi):\n",
+    "    x, y = screen_to_plane(resX, resY, X, Y, f)\n",
+    "    x_n, y_n, z_n = plane_to_sphere(x, y)\n",
+    "    u_n, v_n, w_n = cam_to_sun(x_n, y_n, z_n, psi, theta, phi)\n",
+    "    r, theta, phi = cartesian_to_spherical(u_n, v_n, w_n)\n",
+    "    colour = angle_to_colour(phi, theta)\n",
+    "    return colour\n",
+    "\n",
+    "pixel_to_colour(160, 90, 10, 10, 1, 0, 0, 0)\n",
+    "\n",
+    "rouge_noir()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "996e8e2f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
